                - The UUIDs of the instances of 'models.ActType' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                  A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
            * Tickets :
                - The UUIDs of the instances of models 'Status', 'Priority' & 'Criticity' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                    - In 'models.status', the constants '*_PK' & 'BASE_STATUS' have been removed.
                    - A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
            * Mobile :
                - In the function-views 'persons_portal()' & 'search_person()', "contact_model" & "orga_model" are not injected in the template context anymore.
                - The CSS classes referencing 'ActivityType' IDs have been renamed;
                  e.g. "activity-type-activities-activitytype_meeting" became "activity-type-meeting".
            * Events :
                - The UUIDs of the instances of 'models.EventType' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                  A data migration fixes the UUIDs of the 4 types provided by default, and stores the old UUIDs in their field "meta_data".
            * Projects :
                - The UUIDs of the instances of 'models.ProjectStatus' & 'models.TaskStatus' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                    - The constants '*_PK' & 'TASK_STATUS' (and the class 'TaskStatusDesc') have been removed.
                    - A data migration fixes the UUIDs of the Statuses provided by default, and stores the old UUIDs in their field "meta_data".
                - The button "Close project" uses the new system for mandatory buttons;