@@ -39,3 +39,4 @@ node_modules/
 
 # environment variables
 .env
+/.mypy_cache/
