@@ -473,6 +473,8 @@
                 - The value 'constants.PROP_IS_A_SALESMAN' has been replaced by 'UUID_PROP_IS_A_SALESMAN'.
                 - The UUIDs of the instances of 'models.ActType' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                   A data migration fixes the UUIDs of the instances provided by default, and stores the old UUIDs in their field "meta_data".
+            * Sketch :
+                - In LineChartBrick & BarChartBrick : abscissa_title & ordinate_title default values are now '' instead of None.
             * Tickets :
                 - The UUIDs of the instances of models 'Status', 'Priority' & 'Criticity' created by the 'populate' script are now fixed (to be consistent between Creme instances).
                     - In 'models.status', the constants '*_PK' & 'BASE_STATUS' have been removed.
